# comdirect-api-wrapper

./: .env_EXAMPLE  .flake8  .gitignore  .pre-commit-config.yaml  MCP_USAGE.md  README.md  main.py  mcp_server.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: ComdirectAgent.agent.md
.github/workflows/: publish.yml  secret-scanning.yml  tests.yml
examples/: advanced_example.py  basic_example.py
openapi/: GENERATION.md
scripts/: bootstrap_client.sh  patch_openapi.py
src/comdirect_api/: auth.py  client.py  http.py  session_manager.py
src/comdirect_api/domain/: mappers.py  models.py
src/comdirect_api/models/: account.py  common.py  depot.py  document.py
src/openapi_client/models/: document.py
